--- a/my-app/src/style.scss
+++ b/my-app/src/style.scss
@@ -1,5 +1,6 @@
 
 .music-link{
+    flex-wrap: wrap;
     justify-content: center;
     display: flex;
    
@@ -7,8 +8,8 @@
    
     align-items: center;
     
-    width: 1550px;
-    height: 50px;
+    width: 100%;
+    height: 40px;
     background-color: #52adad;
     .p{
      
@@ -66,6 +67,7 @@
  
     
     .container{
+        flex-wrap: wrap;
 
         .videoplayer{
             h1{
@@ -105,7 +107,7 @@
             }
             
             
-             margin-bottom: 100px;
+             margin-bottom: 40px;
            }
             align-items: center;
           
@@ -413,8 +415,9 @@
           }
             justify-content: space-between;
             .uye{
+                background: linear-gradient(to bottom, #29335C, #52adad 40%) ;
                 background-color: #52adad;
-                box-shadow: 2px 2px 4px;
+                box-shadow: 3px 3px 4px;
                
                 border: 1px solid gray;
                 margin-top: 70px;
@@ -439,7 +442,7 @@
                     h4{
                         color: teal;
                     }
-                    border-radius: 10px;
+                    border-radius: 40px;
                     margin-top: 15px;
                         width: 250px;
                         height: 220px;
@@ -582,6 +585,17 @@
                     
                     
                 }
+                
+                .youtube{
+                    display: flex;
+                    .youtube-text{
+                     margin-top: 5px;
+                     margin-left: 7px;
+                    }
+                    
+                    
+                }
+
                
                
               } 
